[gd_scene load_steps=10 format=3 uid="uid://buad1dyyyy7aw"]

[ext_resource type="Script" path="res://Scripts/Scenes/Fisher.gd" id="1_4qm21"]
[ext_resource type="Texture2D" uid="uid://1rai4xu0bm1u" path="res://Sprites/Fisher.png" id="1_ieamg"]
[ext_resource type="Texture2D" uid="uid://dk0pai61bsa1k" path="res://Sprites/FisherAbove1.png" id="2_n4rv7"]
[ext_resource type="Script" path="res://Scripts/Music/Fisher_waiting_music.gd" id="3_065n4"]
[ext_resource type="Texture2D" uid="uid://dhakhv7yq24cm" path="res://Sprites/FisherAbove2.png" id="3_tae2p"]
[ext_resource type="Script" path="res://Scripts/Logic/exp_bar.gd" id="7_8n4rg"]
[ext_resource type="Script" path="res://Scripts/Logic/Level.gd" id="7_f7ody"]
[ext_resource type="Script" path="res://Scripts/Logic/current_exp.gd" id="8_eosvr"]
[ext_resource type="Script" path="res://Scripts/Logic/required_exp.gd" id="9_3qt75"]

[node name="Fisher" type="Node2D"]
script = ExtResource("1_4qm21")

[node name="FisherSprite" type="Sprite2D" parent="."]
position = Vector2(572, 611)
scale = Vector2(0.532374, 0.532374)
texture = ExtResource("1_ieamg")
script = ExtResource("3_065n4")

[node name="Indicator1" type="Sprite2D" parent="."]
position = Vector2(570, 541)
scale = Vector2(0.503546, 0.460432)
texture = ExtResource("2_n4rv7")

[node name="Indicator2" type="Sprite2D" parent="."]
position = Vector2(572, 538)
scale = Vector2(0.453901, 0.482014)
texture = ExtResource("3_tae2p")

[node name="FishCaught" type="RichTextLabel" parent="."]
offset_left = 461.0
offset_top = 267.0
offset_right = 690.0
offset_bottom = 307.0

[node name="Level" type="Label" parent="."]
offset_left = 575.0
offset_top = 6.0
offset_right = 626.0
offset_bottom = 29.0
horizontal_alignment = 1
script = ExtResource("7_f7ody")

[node name="EXPBar" type="ProgressBar" parent="."]
offset_left = 394.0
offset_top = 28.0
offset_right = 811.0
offset_bottom = 48.0
script = ExtResource("7_8n4rg")

[node name="CurrentEXP" type="Label" parent="EXPBar"]
layout_mode = 0
offset_left = 7.0
offset_top = 3.0
offset_right = 47.0
offset_bottom = 19.0
script = ExtResource("8_eosvr")

[node name="RequiredEXP" type="Label" parent="EXPBar"]
layout_mode = 0
offset_left = 371.0
offset_top = 2.0
offset_right = 411.0
offset_bottom = 18.0
horizontal_alignment = 2
script = ExtResource("9_3qt75")
